--- a/kitcheningg/index.html
+++ b/kitcheningg/index.html
@@ -21,66 +21,74 @@
                 <li class="h4_nav"><a href="">SUCURSALES</a></li>
                 <li class="h4_nav"><a href="">CONTACTO</a></li>
             </ul>
-        
+
         </nav>
     </header>
 
     <section id="section_1"><img src="./img/img-banner.jpg" alt="" class="img"></section>
 
     <section id="section_2">
+        <section class="section_11">
+            <article>
+                <img src="./img/img-pdto-1.jpg" alt="" class="img_productos">
+                <h2><b>Lorem imsum amet</b></h2>
+                <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo
+                    que
+                    esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
+                <p class="ver_mas"> Ver Mas</p>
+            </article>
 
-        <article>
-            <img src="./img/img-pdto-1.jpg" alt="" class="img_productos">
-            <h2><b>Lorem imsum amet</b></h2>
-            <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo que
-                esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
-            <p class="ver_mas"> Ver Mas</p>
-        </article>
+            <article>
+                <img src="./img/img-pdto-2.jpg" alt="" class="img_productos">
+                <h2><b>Lorem imsum amet</b></h2>
+                <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo
+                    que
+                    esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
+                <p class="ver_mas"> Ver Mas</p>
+            </article>
 
-        <article>
-            <img src="./img/img-pdto-2.jpg" alt="" class="img_productos">
-            <h2><b>Lorem imsum amet</b></h2>
-            <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo que
-                esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
-            <p class="ver_mas"> Ver Mas</p>
-        </article>
+            <article>
+                <img src="./img/img-pdto-3.jpg" alt="" class="img_productos">
+                <h2><b>Lorem imsum amet</b></h2>
+                <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo
+                    que
+                    esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
+                <p class="ver_mas"> Ver Mas</p>
+            </article>
+        </section>
 
-        <article>
-            <img src="./img/img-pdto-3.jpg" alt="" class="img_productos">
-            <h2><b>Lorem imsum amet</b></h2>
-            <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo que
-                esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
-            <p class="ver_mas"> Ver Mas</p>
-        </article>
+        <section class="section_22">
+            <article>
+                <img src="./img/img-pdto-1.jpg" alt="" class="img_productos">
+                <h2><b>Lorem imsum amet</b></h2>
+                <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo
+                    que
+                    esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
+                <p class="ver_mas"> Ver Mas</p>
+            </article>
 
-        <article>
-            <img src="./img/img-pdto-1.jpg" alt="" class="img_productos">
-            <h2><b>Lorem imsum amet</b></h2>
-            <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo que
-                esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
-            <p class="ver_mas"> Ver Mas</p>
-        </article>
+            <article>
+                <img src="./img/img-pdto-2.jpg" alt="" class="img_productos">
+                <h2><b>Lorem imsum amet</b></h2>
+                <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo
+                    que
+                    esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
+                <p class="ver_mas"> Ver Mas</p>
+            </article>
 
-        <article>
-            <img src="./img/img-pdto-2.jpg" alt="" class="img_productos">
-            <h2><b>Lorem imsum amet</b></h2>
-            <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo que
-                esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
-            <p class="ver_mas"> Ver Mas</p>
-        </article>
-
-        <article>
-            <img src="./img/img-pdto-3.jpg" alt="" class="img_productos">
-            <h2><b>Lorem imsum amet</b></h2>
-            <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo que
-                esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
-            <p class="ver_mas"> Ver Mas</p>
-        </article>
-
+            <article>
+                <img src="./img/img-pdto-3.jpg" alt="" class="img_productos">
+                <h2><b>Lorem imsum amet</b></h2>
+                <p class="parrafitos"> Lorem impus es re lindo y te re conviene ir a visitar y alojarte aca y comer todo
+                    que
+                    esta re bueno. Se re valora su estadia asi que vemgannnnn.</p>
+                <p class="ver_mas"> Ver Mas</p>
+            </article>
+        </section>
     </section>
 
     <footer>
-        <p> Home  |  Clientes  |  Servicios  |  Porfolio  |  Sucursales  |  Contacto  |</p>
+        <p> Home | Clientes | Servicios | Porfolio | Sucursales | Contacto |</p>
     </footer>
 
 </body>
