--- a/kitcheningg/index.html
+++ b/kitcheningg/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <header>
+        <div id="botones_div">
+            <a href="./registro.html">Registro</a>
+            <a href="./login.html">Login</a>
+    
+        </div>
+
+
         <img src="./img/logo.jpg" alt="">
 
         <nav>
